[package]
name = "confluence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
base64 = "0.21.2"
log = "0.4.19"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.97"
tokio = "1.28.2"
